Fix horizontal overflow on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,6 +19,10 @@
 }
 
 /* ------------- General Styles ------------- */
+html,
+body {
+  overflow-x: hidden !important;
+}
 
 body {
   font-family: "Lato", sans-serif;
